# MCP-Context-Life

./: .context-session.id  .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  context-life.spec  pyproject.toml
.github/workflows/: ci.yml  release-on-merge.yml  release.yml  version-sync.yml
bucket/: context-life.json
docs/: context-optimization.md  errata-registry.md  installation.md  orchestrator-integration.md
mmcp/: __init__.py  __main__.py  __main__exe__.py  cache_manager.py  cli.py  config.py  orchestrator_detector.py  rag_engine.py  server.py  session_store.py  telemetry_service.py  token_counter.py  trim_history.py
mmcp/application/: __init__.py
mmcp/application/features/: __init__.py
mmcp/application/ports/: __init__.py  knowledge_store.py  message_normalizer.py  session_store.py  session_store_connection.py  session_store_migrations.py  session_store_queries.py  session_store_row_mapper.py  telemetry_store.py  token_counter.py  token_counting_strategy.py  trim_strategy.py
mmcp/domain/: __init__.py  auto_invoke_metrics.py  context_slice.py  models.py  session_state.py
mmcp/infrastructure/: __init__.py  config.py  session_id_resolver.py
mmcp/infrastructure/context/: __init__.py  trim_history.py  trim_orchestrator.py
mmcp/infrastructure/environment/: __init__.py  config.py  orchestrator_detector.py
mmcp/infrastructure/installation/: __init__.py  context_life_installer.py
mmcp/infrastructure/knowledge/: __init__.py  rag_engine.py
mmcp/infrastructure/persistence/: cache_manager.py  json_message_normalizer.py  session_persistence.py  session_store.py  session_store_connection.py  session_store_migrations.py  session_store_queries.py  session_store_row_mapper.py
mmcp/infrastructure/telemetry/: __init__.py  auto_invoke_tracker.py  telemetry_service.py
mmcp/infrastructure/tokens/: __init__.py  openai_token_counting.py  token_counter.py
mmcp/orchestration/: auto_invoke_cache.py  phase_guardian.py  stack_detector.py
mmcp/presentation/: __init__.py  __main__.py  app_container.py
mmcp/presentation/cli/: __init__.py  cli.py  commands.py  dashboard.py  diagnostics.py  upgrade.py  warmup.py
mmcp/presentation/mcp/: __init__.py  server.py
openspec/: config.yaml
openspec/changes/mcp-context-life-auto-invocation-improvements/: proposal.md  tasks.md
openspec/changes/solid-refactor-context-life/: tasks.md  (+1 more)
scripts/: bump-version.py  get-version.py  update-scoop-hash.py
skills/contexto-life-docs/: SKILL.md
skills/contexto-life-planning-rigor/: SKILL.md
tests/: conftest.py  test_app_container.py  test_auto_invoke_cache.py  test_auto_invoke_integration.py  test_auto_invoke_metrics.py  test_auto_invoke_tools.py  test_auto_invoke_tracker.py  test_cache_manager.py  test_cache_persistence.py  test_cache_store_port.py  test_cli_command_service.py  test_cli_unicode.py  test_config.py  test_context_health.py  test_context_life_installer.py  test_context_optimizer.py  test_context_slice.py  test_dashboard.py  test_knowledge_slice.py  test_layer_visibility.py  test_lazy_rag.py  test_mcp_status_display.py  test_orchestration_contract.py  test_orchestrator_detector.py  test_performance_and_verification.py  test_phase10_wiring.py  test_rag_warmup_cli.py  test_rag_warmup_config.py  test_rag_warmup_runtime.py  test_session_id_resolver.py  test_session_persistence.py  test_session_state.py  test_stack_detector.py  test_telemetry_service.py  test_telemetry_slice.py  test_token_cache.py  test_tokens_slice.py  test_trim_history.py  test_update_scoop_hash.py  test_upgrade_cli.py
(+94 files in other folders)
